[package]
name = "nt-usb-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
futures = "0.3.25"
futures-channel = "0.3.25"
futures-util = "0.3.25"
nt4_proto = { git = "https://github.com/first-rust-competition/nt4-mvp", package = "proto" }
serialport = "4.2.0"
tokio = {version = "1.23.0", features = ["full"]}
usb_proto = { path = "../nt-usb-proto", package = "nt-usb-proto" }
