[package]
name = "nt-usb-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
async-std = "1.12.0"
base64 = "0.20.0"
futures = "0.3.25"
futures-channel = "0.3.25"
futures-util = "0.3.25"
http = "0.2.8"
rand = "0.8.5"
serde =  { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
serialport = "4.2.0"
tokio = {version="1.23.0", features = ["full"]}
tokio-tungstenite = "0.18.0"
url = "2.3.1"
usb_proto = { path = "../nt-usb-proto", package = "nt-usb-proto" }
